--- a/HTML/svetaine.html
+++ b/HTML/svetaine.html
@@ -58,7 +58,7 @@
 </div>
 <!-----featured products-->
 <div class="small-container">
-    <h2 class="title">Featured products</h2>
+    <h2 class="title">Pristatomi produktai</h2>
     <div class="row">
         <div class="col-4">
             <img src="produktas1.jpg">
